Filling in text

--- a/new/index.html
+++ b/new/index.html
@@ -4,6 +4,7 @@
 <title>Griffin Brodman</title>
 <link rel="stylesheet" href="./css/common.css">
 <link rel="stylesheet" href="./css/animate.css">
+<link rel="icon" href="./images/owl.svg">
 <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,800,800italic' rel='stylesheet' type='text/css'>
        <script src="./js/wow.min.js"></script>
@@ -24,47 +25,51 @@
 
 <div id = "purpose" class ="wow bounceInUp">
 <h1>LEADERSHIP </h1>
-<p>I believe that great leadership looks like using every aspect of yourself, body and mind, in service of others. I think that great leaders inspire, lorem ipsum arete. In at pretium ante, a cursus dui. Nunc molestie magna in maximus pellentesque. Proin est quam, mollis nec hendrerit pharetra, sollicitudin et eros. Quisque tristique at metus vel dictum. Duis eget diam fermentum, luctus nulla in, feugiat felis. Nullam scelerisque quis arcu ut ornare. Praesent tortor dui, dignissim quis laoreet vel, suscipit in lorem. Donec sapien nibh, convallis at imperdiet non, maximus a sem.</p>
-<p>I believe that great leadership looks like using every aspect of yourself, body and mind, in service of others. I think that great leaders inspire, lorem ipsum arete. In at pretium ante, a cursus dui. Nunc molestie magna in maximus pellentesque. Proin est quam, mollis nec hendrerit pharetra, sollicitudin et eros. Quisque tristique at metus vel dictum. Duis eget diam fermentum, luctus nulla in, feugiat felis. Nullam scelerisque quis arcu ut ornare. Praesent tortor dui, dignissim quis laoreet vel, suscipit in lorem. Donec sapien nibh, convallis at imperdiet non, maximus a sem.</p>  </div>
-<br>
-<br>
+<p>&emsp;&emsp;I believe that great leadership looks like using every aspect of yourself, body and mind, in service of others. I think that great leaders inspire, teach, and drive others, so that a team can accomplish more than the sum of their parts.</p>
+<p>&emsp;&emsp;One thing I believe embodies the spirit of leadership is the concept of <b>Arete</b>, an ancient Greek term. There's no direct translation, but it resembles a mixture of Efficiency and Moral Virtue. "A man or woman of Arete is a person of the highest effectiveness; they use all of their faculties - strength, bravery and wit - to achieve real results."</p>  
+<p>&emsp;&emsp;Arete resonates strongly with me, and my opinion of what leaders should be and do. Throughout my Engineering Leadership Program, I have attempted to obtain the skills, knowledge, and understanding needed to be an effective leader. The following represents my journey on this path, and all of the insights I have gained along the way.  </p>
+
+</div>
+
 
 <!-- Click one, expands the screen -->
 <div id = "strengths" class = "wow bounceInUp"> <h1 style="color: C77966;"> WHO I AM </h1>
 <div class = "strengthSection">
     <img src="./images/owl.svg" width = "80px" class = "strengthIcon">
   	<h1> SAGE </h1>
-	<p>I've learned that my leadership presence is that of a sage. When I'm around, I make others feel at ease, and reassure them that things will be taken care of. It gives me an inherent authority, and helps me connect to and engage with others. Do personal brand hereI've learned that my leadership presence is that of a sage. When I'm around, I make others feel at ease, and reassure them that things will be taken care of. It gives me an inherent authority, and helps me connect to and engage with others. Do personal brand here</p>
+	<p>In our leadership program, we've spent a large amount of time discovering and understanding the impact we have on others when we are in a leadership position. I have come to learn, from my peers, that my style most emulates that of a "Sage". When I'm around, allegedly I make others feel at ease, and reassure them that things will be taken care of. It gives me an inherent authority, and helps me connect to and engage with others. I try to use this knowledge to be more intentional when I'm a leader, and know how to use my own unique strengths. For example, I recently attended a personal branding workshop, where the desired outputs were three phrases to keep in mind, so as to be intentional as to how we can be perceived in the workplace. My personal three were Insightfully Nurturing, Sincerely Connected, and Empathetically Lighthearted. These represent what I think my strengths are in team settings, and influence situations. I would consciously change my behavior and make sure that I play up  both my "sagely" leadership presence, by being a teacher, and quietly empowering, and by focusing on my relationships with others, to build sincere connections and nurture others. </p>
 </div>
 
 <div class = "strengthSection">
 	<img src="./images/brain.svg" width = "80px" class = "strengthIcon">
 	<h1> PURPOSE </h1>
-	<p>I've learned that my leadership presence is that of a sage. When I'm around, I make others feel at ease, and reassure them that things will be taken care of. It gives me an inherent authority, and helps me connect to and engage with others I've learned that my leadership presence is that of a sage. When I'm around, I make others feel at ease, and reassure them that things will be taken care of. It gives me an inherent authority, and helps me connect to and engage with others. Do personal brand here</p>
+	<p>I joined the leadership program at the beginning of this year to discover what my pasisons were, and to hone in on my calling in life. My main goals were to figure out, as corny as it sounds, my "life's purpose". I was thrilled when this was a topic of class early on, our "compelling purpose", defined as the intersection of what the world needs and what we hunger for. The theory is that no one can lead a team effectively for any sustainable amount of time without a compelling purpose. Through much meditation, thought, journaling, and consultations, I realized that I had always been deeply passionate about mental wellness. When I was little, I had always wanted to be a psychiatrist, but I was quickly told I'd either have to go to med school or not make enough money, discouraging to younger me. I realized how much I loved helping people, relating my own experiences, and trying to relieve the storm that some people experience in their minds. I never feel better than when I'm helping others, and I'm beginning to have the knowledge and experience to make a significant difference. In my free time I daydream about starting a mental health support group in my new job, or at becoming certified as a coach to assist others in their every day lives. I'm excited to see where my passion for mental wellness takes me next.</p>
 </div>
 
 <div class = "strengthSection last">
 	<img src="./images/puzzle.svg" width = "80px" class = "strengthIcon">
 	<h1>CORE VALUES</h1>
-	<p>I've learned that my leadership presence is that of a sage. When I'm around, I make others feel at ease, and reassure them that things will be taken care of. It gives me an inherent authority, and helps me connect to and engage with others I've learned that my leadership presence is that of a sage. When I'm around, I make others feel at ease, and reassure them that things will be taken care of. It gives me an inherent authority, and helps me connect to and engage with others. Do personal brand here</p>
+	<p>My absolutely favorite activity that I've done in my leadership program was a discussion and identification of my values. Erica Dawson and I sat down for two hours, the first of which we spent with just me telling her stories. I told stories about times I was feeling amazing, satisfied, fulfilled, and why. I told stories about when I felt punched in the gut, like everything was wrong, and why. After this first hour, Erica listed at least sixty different words, all words that came out as possible values of mine. I then sorted them, modified some, erased any that felt off base to me, and was left with my most core values, those that drive me, the ones I feel incredible when I satisfy, and awful when I violate.</p>
+	<p>The values that are most core to me are Connection, TODO</p>
 </div>
 
 
 </div>
 <!-- do media query, add text under div -->
 <!-- transitions on inside circle and title -->
+<!-- reset button -->
 <div id = "minecart" > <h1 class = "wow bounceInUp"> MY JOURNEY </h1> <hr class = "wow bounceInUp">
 
 	<div id = "mineGraphic" class = "wow bounceInUp">
-	<img src = "./images/anxiety.svg" class="derailer" width = "80px" style = "position:absolute;margin-left:-10px;margin-top:-10px;" data-title="ANXIETY" data-type="DERAILER" data-text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ac lacus orci. Duis mattis accumsan enim. Pellentesque a efficitur enim, eu venenatis nunc. Ut elit erat, vehicula maximus ante at, aliquam aliquam arcu. Ut turpis turpis, mollis eu justo id, fringilla imperdiet libero. Nullam quis auctor ipsum. Etiam eget metus mi. Aliquam et arcu luctus, commodo mauris eget, auctor velit. Nulla fringilla sodales libero, quis condimentum lorem ultricies sit amet. In venenatis ex nec ex placerat, sit amet auctor est laoreet. Quisque purus sem, scelerisque sit amet dignissim id, tempus a felis. Nullam venenatis blandit porttitor. Mauris elementum vitae ligula vel aliquet. Donec vulputate, lacus molestie sollicitudin pellentesque, nisi libero placerat risus, quis iaculis tellus dolor sit amet turpis. Duis rutrum neque at diam condimentum vestibulum.">
-	<img src = "./images/lion.svg" class="derailer" width = "80px" style = "position:absolute;margin-left:180px;margin-top:-10px;" data-title="COURAGE" data-type="COURSE CORRECTOR" data-text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ac lacus orci. Duis mattis accumsan enim. Pellentesque a efficitur enim, eu venenatis nunc. Ut elit erat, vehicula maximus ante at, aliquam aliquam arcu. Ut turpis turpis, mollis eu justo id, fringilla imperdiet libero. Nullam quis auctor ipsum. Etiam eget metus mi. Aliquam et arcu luctus, commodo mauris eget, auctor velit. Nulla fringilla sodales libero, quis condimentum lorem ultricies sit amet. In venenatis ex nec ex placerat, sit amet auctor est laoreet. Quisque purus sem, scelerisque sit amet dignissim id, tempus a felis. Nullam venenatis blandit porttitor. Mauris elementum vitae ligula vel aliquet. Donec vulputate, lacus molestie sollicitudin pellentesque, nisi libero placerat risus, quis iaculis tellus dolor sit amet turpis. Duis rutrum neque at diam condimentum vestibulum.">
+	<img src = "./images/anxiety.svg" class="derailer" width = "80px" style = "position:absolute;margin-left:-10px;margin-top:-10px;" data-title="ANXIETY" data-type="DERAILER" data-text = "I always try to be my best, but if I am ever at my worst, it is almost always caused by anxiety. When my anxiety takes over, I forget about how I want to act and who I want to be. When I'm anxious, I'm emotional, reactive, and hopeless. To me it feels like being two different people. I know anxiety is an issue I'll always have ot deal with, but I have made great strides in dealing with it. I've learned multiple coping techniques: cognitive behavioral therapy, disassociation, self compassion, and mindfulness. I wouldn't ">
+	<img src = "./images/lion.svg" class="derailer" width = "80px" style = "position:absolute;margin-left:180px;margin-top:-10px;" data-title="COURAGE" data-type="CORRECTOR" data-text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ac lacus orci. Duis mattis accumsan enim. Pellentesque a efficitur enim, eu venenatis nunc. Ut elit erat, vehicula maximus ante at, aliquam aliquam arcu. Ut turpis turpis, mollis eu justo id, fringilla imperdiet libero. Nullam quis auctor ipsum. Etiam eget metus mi. Aliquam et arcu luctus, commodo mauris eget, auctor velit. Nulla fringilla sodales libero, quis condimentum lorem ultricies sit amet. In venenatis ex nec ex placerat, sit amet auctor est laoreet. Quisque purus sem, scelerisque sit amet dignissim id, tempus a felis. Nullam venenatis blandit porttitor. Mauris elementum vitae ligula vel aliquet. Donec vulputate, lacus molestie sollicitudin pellentesque, nisi libero placerat risus, quis iaculis tellus dolor sit amet turpis. Duis rutrum neque at diam condimentum vestibulum.">
 	<img src = "./images/scales.svg" class="derailer" width = "80px" style = "position:absolute;margin-left:-10px;margin-top:180px;" data-title="EGO" data-type="DERAILER" data-text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ac lacus orci. Duis mattis accumsan enim. Pellentesque a efficitur enim, eu venenatis nunc. Ut elit erat, vehicula maximus ante at, aliquam aliquam arcu. Ut turpis turpis, mollis eu justo id, fringilla imperdiet libero. Nullam quis auctor ipsum. Etiam eget metus mi. Aliquam et arcu luctus, commodo mauris eget, auctor velit. Nulla fringilla sodales libero, quis condimentum lorem ultricies sit amet. In venenatis ex nec ex placerat, sit amet auctor est laoreet. Quisque purus sem, scelerisque sit amet dignissim id, tempus a felis. Nullam venenatis blandit porttitor. Mauris elementum vitae ligula vel aliquet. Donec vulputate, lacus molestie sollicitudin pellentesque, nisi libero placerat risus, quis iaculis tellus dolor sit amet turpis. Duis rutrum neque at diam condimentum vestibulum.">
-	<img src = "./images/scales.svg" class="derailer" width = "80px" style = "position:absolute;margin-left:180px;margin-top:180px;" data-title="ETHICS" data-type="COURSE CORRECTOR" data-text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ac lacus orci. Duis mattis accumsan enim. Pellentesque a efficitur enim, eu venenatis nunc. Ut elit erat, vehicula maximus ante at, aliquam aliquam arcu. Ut turpis turpis, mollis eu justo id, fringilla imperdiet libero. Nullam quis auctor ipsum. Etiam eget metus mi. Aliquam et arcu luctus, commodo mauris eget, auctor velit. Nulla fringilla sodales libero, quis condimentum lorem ultricies sit amet. In venenatis ex nec ex placerat, sit amet auctor est laoreet. Quisque purus sem, scelerisque sit amet dignissim id, tempus a felis. Nullam venenatis blandit porttitor. Mauris elementum vitae ligula vel aliquet. Donec vulputate, lacus molestie sollicitudin pellentesque, nisi libero placerat risus, quis iaculis tellus dolor sit amet turpis. Duis rutrum neque at diam condimentum vestibulum." >
+	<img src = "./images/scales.svg" class="derailer" width = "80px" style = "position:absolute;margin-left:180px;margin-top:180px;" data-title="ETHICS" data-type="CORRECTOR" data-text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ac lacus orci. Duis mattis accumsan enim. Pellentesque a efficitur enim, eu venenatis nunc. Ut elit erat, vehicula maximus ante at, aliquam aliquam arcu. Ut turpis turpis, mollis eu justo id, fringilla imperdiet libero. Nullam quis auctor ipsum. Etiam eget metus mi. Aliquam et arcu luctus, commodo mauris eget, auctor velit. Nulla fringilla sodales libero, quis condimentum lorem ultricies sit amet. In venenatis ex nec ex placerat, sit amet auctor est laoreet. Quisque purus sem, scelerisque sit amet dignissim id, tempus a felis. Nullam venenatis blandit porttitor. Mauris elementum vitae ligula vel aliquet. Donec vulputate, lacus molestie sollicitudin pellentesque, nisi libero placerat risus, quis iaculis tellus dolor sit amet turpis. Duis rutrum neque at diam condimentum vestibulum." >
 	<div id = "centralCircle"><h1>Click for more</h1></div>
 
  	</div>
 
-<div id = "mineText" class = "wow bounceInUp">On my leadership journey, I know that many potential challenges will arise, and many factors will seek to derail me. To the left, I have highlighted some of my potential derailers, as well as the factors that I know will keep me "on track".On my leadership journey, I know that many potential challenges will arise, and many factors will seek to derail me. To the left, I have highlighted some of my potential derailers, as well as the factors that I know will keep me "on track".On my leadership journey, I know that many potential challenges will arise, and many factors will seek to derail me. To the left, I have highlighted some of my potential derailers, as well as the factors that I know will keep me "on track". </div>
+<div id = "mineText" class = "wow bounceInUp">On my leadership journey, I know that many potential challenges will arise, and many factors will seek to derail me. To the left, I have highlighted some of my potential derailers, as well as the factors that I know will keep me "on track". An important facet of leadership is understanding why we make the decisions we do, and what we can do about that. My derailers are things that might keep me from being the best leader I could be, and my course correctors are the things that I know will keep me moving in the right direction.</div>
 
 
 
@@ -74,9 +79,25 @@
 <br><br>
 
 <div id = "grow">
-What I've learned in the program - skills
-How have I grown through the class and working on a team
-Personal and proffessional goals
+<div class="carouselbox">
+  <div class="buttons">
+    <button class="prev">
+       &#10096; PREVIOUS <span class="offscreen">Previous</span>
+    </button> 
+    <button class="next">
+      <span class="offscreen">Next</span>NEXT &#10097;
+    </button>
+  </div>
+  <ol class="content">
+    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ac lacus orci. Duis mattis accumsan enim. Pellentesque a efficitur enim, eu venenatis nunc. Ut elit erat, vehicula maximus ante at, aliquam aliquam arcu. Ut turpis turpis, mollis eu justo id, fringilla imperdiet libero.</li>
+    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ac lacus orci. Duis mattis accumsan enim. Pellentesque a efficitur enim, eu venenatis nunc. Ut elit erat, vehicula maximus ante at, aliquam aliquam arcu. Ut turpis turpis, mollis eu justo id, fringilla imperdiet libero.</li>
+    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ac lacus orci. Duis mattis accumsan enim. Pellentesque a efficitur enim, eu venenatis nunc. Ut elit erat, vehicula maximus ante at, aliquam aliquam arcu. Ut turpis turpis, mollis eu justo id, fringilla imperdiet libero./li>
+    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ac lacus orci. Duis mattis accumsan enim. Pellentesque a efficitur enim, eu venenatis nunc. Ut elit erat, vehicula maximus ante at, aliquam aliquam arcu. Ut turpis turpis, mollis eu justo id, fringilla imperdiet libero.</li>
+  </ol>
+</div>
+
+
+
 </div>
 
 <div id = "footer"> <!--Make horizontally align -->
