--- a/new/index.html
+++ b/new/index.html
@@ -26,13 +26,12 @@
 <div id = "purpose" class ="wow bounceInUp">
 <h1>LEADERSHIP </h1>
 <p>&emsp;&emsp;I believe that great leadership looks like using every aspect of yourself, body and mind, in service of others. I think that great leaders inspire, teach, and drive others, so that a team can accomplish more than the sum of their parts.</p>
-<p>&emsp;&emsp;One thing I believe embodies the spirit of leadership is the concept of <b>Arete</b>, an ancient Greek term. There's no direct translation, but it resembles a mixture of Efficiency and Moral Virtue. "A man or woman of Arete is a person of the highest effectiveness; they use all of their faculties - strength, bravery and wit - to achieve real results."</p>  
+<p>&emsp;&emsp;One thing I believe embodies the spirit of leadership is the concept of <b>Arete</b>, an ancient Greek term. There's no direct translation, but it resembles a mixture of efficiency and moral virtue. "A man or woman of Arete is a person of the highest effectiveness; they use all of their faculties - strength, bravery and wit - to achieve real results."</p>  
 <p>&emsp;&emsp;Arete resonates strongly with me, and my opinion of what leaders should be and do. Throughout my Engineering Leadership Program, I have attempted to obtain the skills, knowledge, and understanding needed to be an effective leader. The following represents my journey on this path, and all of the insights I have gained along the way.  </p>
 
 </div>
 
 
-<!-- Click one, expands the screen -->
 <div id = "strengths" class = "wow bounceInUp"> <h1 style="color: C77966;"> WHO I AM </h1>
 <div class = "strengthSection">
     <img src="./images/owl.svg" width = "80px" class = "strengthIcon">
@@ -97,7 +96,7 @@
     <p>I've had a phenomenal time working with my team, and I've learned so much from them. Working with my team helped me understand the balance between contributing when I had something to say, but also leaving room for everyone to be a contributer. I learned about different styles of meetings, and not to make assumptions. Our team struggled through some communication issues at first, but eventually we all landed on the same page, as a well oiled machine. We were able to achieve real change, and only because we worked together so well. I found it great to be able to take a back seat on some activities because I trusted my team so well, and it was a way more efficient way to conduct business.</p></li>
 
     <li><h2> HOW I HAVE GROWN FROM THIS PROGRAM </h2>
-    <p>I have learned an innumerable amount of skills from this program. I learned how to make decisions like an effective leader, and what factors of a decision lead to more or less team involvement. I've learned about the different types of followership, and that to be most helpful to a leader, I should try to stay a bit more positive. I've learned about conflict, and I'm now learning I need to be slightly less accomodating, and slightly more assertive with my needs. </p></li>
+    <p>I have learned an innumerable amount of skills from this program. I learned how to make decisions like an effective leader, and what factors of a decision lead to more or less team involvement. I've learned about the different types of followership, and that to be most helpful to a leader, I should try to stay a bit more positive. I've learned about conflict, and I'm now learning I need to be slightly less accomodating, and slightly more assertive with my own needs. I've learned not to make assumptions, and to mindfully challenge my own perceptions of reality before assuming they are true.</p></li>
 
 
     <li><h2>PERSONAL AND PROFESSIONAL GOALS</h2>
