--- a/new/index.html
+++ b/new/index.html
@@ -4,7 +4,7 @@
 <title>Griffin Brodman</title>
 <link rel="stylesheet" href="./css/common.css">
 <link rel="stylesheet" href="./css/animate.css">
-<link rel="icon" href="./images/owl.svg">
+<link rel="icon" href="./images/logo.svg">
 <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,800,800italic' rel='stylesheet' type='text/css'>
        <script src="./js/wow.min.js"></script>
@@ -93,14 +93,14 @@
   	<p>The Engineering Leadership Program has been an incredible experience for me. I've learned so much about myself, teams, leadership, and how I can help the world. The following pages represent a useful summary of what I've learned.</p></li>
 
     <li><h2>HOW I HAVE GROWN FROM WORKING WITH MY TEAM</h2>
-    <p>I've had a phenomenal time working with my team, and I've learned so much from them. Working with my team helped me understand the balance between contributing when I had something to say, but also leaving room for everyone to be a contributer. I learned about different styles of meetings, and not to make assumptions. Our team struggled through some communication issues at first, but eventually we all landed on the same page, as a well oiled machine. We were able to achieve real change, and only because we worked together so well. I found it great to be able to take a back seat on some activities because I trusted my team so well, and it was a way more efficient way to conduct business.</p></li>
+    <p>I've had a phenomenal time working with my team, and I've learned so much from them. Working with my team helped me understand the balance between contributing when I had something to say, but also leaving room for everyone to be a contributer. I learned about different styles of meetings, and not to make assumptions. Our team struggled through some communication issues at first, but eventually we all landed on the same page, as a well oiled machine. We were able to achieve real change, and only because we worked together so well. I found it great to be able to take a back seat on some activities because I trusted my team so well, and it was a way more efficient way to conduct business. This team was a model team, and as I move on, I'll be sad that I'll be encountering teams that may not be as educated in leadership as the exemplary students I was fortunate to work with.</p></li>
 
     <li><h2> HOW I HAVE GROWN FROM THIS PROGRAM </h2>
-    <p>I have learned an innumerable amount of skills from this program. I learned how to make decisions like an effective leader, and what factors of a decision lead to more or less team involvement. I've learned about the different types of followership, and that to be most helpful to a leader, I should try to stay a bit more positive. I've learned about conflict, and I'm now learning I need to be slightly less accomodating, and slightly more assertive with my own needs. I've learned not to make assumptions, and to mindfully challenge my own perceptions of reality before assuming they are true.</p></li>
+    <p>I have learned an innumerable amount of skills from this program. I learned how to make decisions like an effective leader, and what factors of a decision lead to more or less team involvement. I've learned about the different types of followership, and that to be most helpful to a leader, I should try to stay a bit more positive. I've learned about conflict, and I'm now learning I need to be slightly less accomodating, and slightly more assertive with my own needs. I've learned not to make assumptions, and to mindfully challenge my own perceptions of reality before assuming they are true. All in all, I've found the directions to head in to improve my own leadership skills, and I plan to spend the rest of my career becoming the best leader I can be.</p></li>
 
 
     <li><h2>PERSONAL AND PROFESSIONAL GOALS</h2>
-    <p></p></li>
+    <p>I cannot wait until next year when my life starts. Immediately, I plan to try to develop a mental wellness club at my new job, a safe space for the discussion of mental wellness, and hopefully be a resource to others in need. I want to be a programmer, and work and save money for the next few years so that after five years, I'll be in a position to make my work decisions a little more based off of my passions, and a little less based off of my financial situation. Longer term, I'm looking into either counseling or coaching as a venue for me to be able to positively impact others lives. Additionally, I think my experience in technology, combined with mental wellness, could be huge. The main issue in mental wellness is that people don't have either the resources to get help nor the knowledge to get help. Technology solves both of these problems, by lowering the cost and the barriers to entry. Hopefully, in the future I can make a meaningful contribution toward my passions.</p></li>
   </ol>
 </div>
 
@@ -110,17 +110,25 @@
 
 <div id = "footer"> <!--Make horizontally align -->
 	<div id = "contact">
-	<h1> Contact me: </h1>
+	<h1> CONTACT ME: </h1>
 	<p>gb282@cornell.edu</p>
 	<p>(908) 907-4431</p>
 	<p>linkedin.com/in/griffinbrodman</p>
 	<br>
 	<p>Copyright Griffin 2015</p>
-	<img src = "./images/logo.svg">
 	</div>
+	
+
 	<div id = "lastThoughts">
-	<h1>Final Thoughts </h1>
-	<p>Lorem Ipsum</p>
+	<h1>THANK YOU </h1>
+	<p>I am so thankful to everyone that's assisted in my development over the past year.</p>
+	<p>Erica Dawson and Werner Zorman</p>
+	<p> The 2015 Leadership Cohort </p>
+	<p> My Leadership Group - Erin Camp, Harrison Goldstein, Kelsey Cadagin, Rishabh Singh, Vidya Ramesh </p>
+	<p>My friends, for always 
+	<p>My wonderful parents, for helping me even get here </p>
+	
+
 	</div>
 
 
