--- a/new/index.html
+++ b/new/index.html
@@ -4,7 +4,7 @@
 <title>Griffin Brodman</title>
 <link rel="stylesheet" href="./css/common.css">
 <link rel="stylesheet" href="./css/animate.css">
-<link rel="icon" href="./images/logo.svg">
+<link rel="icon" href="./images/fav.png">
 <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,800,800italic' rel='stylesheet' type='text/css'>
        <script src="./js/wow.min.js"></script>
@@ -113,20 +113,21 @@
 	<h1> CONTACT ME: </h1>
 	<p>gb282@cornell.edu</p>
 	<p>(908) 907-4431</p>
-	<p>linkedin.com/in/griffinbrodman</p>
-	<br>
-	<p>Copyright Griffin 2015</p>
+	<p><a href="linkedin.com/in/griffinbrodman">linkedin.com/in/griffinbrodman</a></p>
+	<br><br><br><br>
+	<p>&#9400; Griffin Brodman 2015</p>
 	</div>
 	
 
 	<div id = "lastThoughts">
 	<h1>THANK YOU </h1>
-	<p>I am so thankful to everyone that's assisted in my development over the past year.</p>
+	<p>I am so thankful to everyone that's assisted in my development over the past year.</p><br>
 	<p>Erica Dawson and Werner Zorman</p>
 	<p> The 2015 Leadership Cohort </p>
 	<p> My Leadership Group - Erin Camp, Harrison Goldstein, Kelsey Cadagin, Rishabh Singh, Vidya Ramesh </p>
-	<p>My friends, for always 
-	<p>My wonderful parents, for helping me even get here </p>
+	<p>My friends, for always pushing me to be my best, and never being afraid to take a chance to help me grow </p>
+	<p>Alyssa, for always accepting me, and being understanding </p>
+	<p>My wonderful parents, Lisa and Chris; I wouldn't even be here without you </p>
 	
 
 	</div>
