--- a/new/index.html
+++ b/new/index.html
@@ -4,7 +4,7 @@
 <title>Griffin Brodman</title>
 <link rel="stylesheet" href="./css/common.css">
 <link rel="stylesheet" href="./css/animate.css">
-<link rel="icon" href="./images/fav.png">
+<link rel="icon" type="image/png"  href="./images/fav.png">
 <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,800,800italic' rel='stylesheet' type='text/css'>
        <script src="./js/wow.min.js"></script>
