Final commit question mark?

--- a/new/index.html
+++ b/new/index.html
@@ -40,17 +40,19 @@
 </div>
 
 <div class = "strengthSection">
+	<img src="./images/puzzle.svg" width = "80px" class = "strengthIcon">
+	<h1>CORE VALUES</h1>
+	<p>My favorite activity that I've done in my leadership program was a discussion and identification of my values. Erica Dawson and I sat down for two hours, the first of which we spent just telling stories. I told stories about times I was feeling amazing, satisfied, fulfilled, and why. I told stories about when I felt punched in the gut, like everything was wrong, and why. After this first hour, Erica listed at least sixty different words, all  possible values of mine. I then sorted them, erased and modified some, and was left with my most core values, those that drive me and guide me.
+	The values that are most core to me are Connection, Nurturing, Positivity, and Putting the Pieces Together. Connecting with others is what I live for; my favorite types of conversations are deep, personal, and live me with an intimate knowledge of what goes on in a given person's head. Nothing makes me feel more fulfilled than helping others, specially helping others through building them up with knowledge and wisdom, and watching them succeed. I always look on the bright side; I think a sunny disposition is instrumental to leading a happy life, and I get confused when others don't share in my positive convictions. I love organization, and I love finding out how things can fit together. Now that I'm fully aware of my values, I need to make sure to continue to bake these into my every day life, and have the forethought to make my decisions in accordance with my actions. </p>
+</div>
+
+<div class = "strengthSection last">
 	<img src="./images/brain.svg" width = "80px" class = "strengthIcon">
 	<h1> PURPOSE </h1>
 	<p>I joined the leadership program at the beginning of this year to discover what my pasisons were, and to hone in on my calling in life. My main goals were to figure out, as corny as it sounds, my "life's purpose". I was thrilled when this was a topic of class early on, our "compelling purpose", defined as the intersection of what the world needs and what we hunger for. The theory is that no one can lead a team effectively for any sustainable amount of time without a compelling purpose. Through much meditation, thought, journaling, and consultations, I realized that I had always been deeply passionate about mental wellness. When I was little, I had always wanted to be a psychiatrist, but I was quickly told I'd either have to go to med school or not make enough money, discouraging to younger me. I realized how much I loved helping people, relating my own experiences, and trying to relieve the storm that some people experience in their minds. I never feel better than when I'm helping others, and I'm beginning to have the knowledge and experience to make a significant difference. In my free time I daydream about starting a mental health support group in my new job, or at becoming certified as a coach to assist others in their every day lives. I'm excited to see where my passion for mental wellness takes me next.</p>
 </div>
 
-<div class = "strengthSection last">
-	<img src="./images/puzzle.svg" width = "80px" class = "strengthIcon">
-	<h1>CORE VALUES</h1>
-	<p>My absolutely favorite activity that I've done in my leadership program was a discussion and identification of my values. Erica Dawson and I sat down for two hours, the first of which we spent with just me telling her stories. I told stories about times I was feeling amazing, satisfied, fulfilled, and why. I told stories about when I felt punched in the gut, like everything was wrong, and why. After this first hour, Erica listed at least sixty different words, all words that came out as possible values of mine. I then sorted them, modified some, erased any that felt off base to me, and was left with my most core values, those that drive me, the ones I feel incredible when I satisfy, and awful when I violate.</p>
-	<p>The values that are most core to me are Connection, TODO</p>
-</div>
+
 
 
 </div>
@@ -120,8 +122,8 @@
 	
 
 	<div id = "lastThoughts">
-	<h1>THANK YOU </h1>
-	<p>I am so thankful to everyone that's assisted in my development over the past year.</p><br>
+	<h1>THANK YOU <span style = "color: #703030;">&#10084;</span></h1>
+	<p>I am so thankful to everyone that has assisted in my development over the past year.</p><br>
 	<p>Erica Dawson and Werner Zorman</p>
 	<p> The 2015 Leadership Cohort </p>
 	<p> My Leadership Group - Erin Camp, Harrison Goldstein, Kelsey Cadagin, Rishabh Singh, Vidya Ramesh </p>
